fixed width on mobile screen

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,7 @@
 .footer{
     background-color: var(--black);
     color: var(--white);
+    width: 100vw;
     height: 50px;
     display: flex;
     justify-content: center;
